Fixed some bugs identified in gdb debugging sessi

--- a/assignment_1/makefile
+++ b/assignment_1/makefile
@@ -4,16 +4,16 @@ pgmEcho: pgmEcho.o pgmio.o pgmerror.o pgmdata.o
 	gcc pgmEcho.o pgmio.o pgmerror.o pgmdata.o -o pgmEcho -g
 
 pgmEcho.o: pgmEcho.c
-	gcc pgmEcho.c -c
+	gcc pgmEcho.c -c -g
 
 pgmio.o: pgmio.c pgmdata.h pgmerror.h pgmlimits.h
-	gcc pgmio.c -c
+	gcc pgmio.c -c -g
 
 pgmerror.o: pgmerror.c pgmdata.h pgmexit.h pgmlimits.h
-	gcc pgmerror.c -c
+	gcc pgmerror.c -c -g
 
 pgmdata.o: pgmdata.c pgmlimits.h
-	gcc pgmdata.c -c
+	gcc pgmdata.c -c -g
 
 clean:
 	rm *.o pgmEcho pgmComp pgma2b pgmb2a pgmReduce pgmTile pgmAssemble
