Implemented pgmComp and fixed usage messages

--- a/assignment_1/makefile
+++ b/assignment_1/makefile
@@ -1,7 +1,10 @@
-all: pgmEcho pgma2b pgmb2a # pgmComp pgmReduce pgmTile pgmAssemble
+all: pgmEcho pgma2b pgmb2a pgmComp # pgmReduce pgmTile pgmAssemble
 
 pgmEcho: pgmEcho.o pgmio.o pgmerror.o pgmdata.o
 	gcc pgmEcho.o pgmio.o pgmerror.o pgmdata.o -o pgmEcho -g
+
+pgmComp: pgmComp.o pgmcompare.o pgmio.o pgmerror.o pgmdata.o
+	gcc pgmComp.o pgmcompare.o pgmio.o pgmerror.o pgmdata.o -o pgmComp -g
 
 pgma2b: pgma2b.o pgmio.o pgmerror.o pgmdata.o
 	gcc pgma2b.o pgmio.o pgmerror.o pgmdata.o -o pgma2b -g
@@ -11,6 +14,9 @@ pgmb2a: pgmb2a.o pgmio.o pgmerror.o pgmdata.o
 
 pgmEcho.o: pgmEcho.c
 	gcc pgmEcho.c -c -g
+
+pgmComp.o: pgmComp.c
+	gcc pgmComp.c -c -g
 
 pgma2b.o: pgma2b.c
 	gcc pgma2b.c -c -g
@@ -26,6 +32,9 @@ pgmerror.o: pgmerror.c pgmdata.h pgmexit.h pgmlimits.h
 
 pgmdata.o: pgmdata.c pgmlimits.h
 	gcc pgmdata.c -c -g
+
+pgmcompare.o: pgmcompare.c pgmdata.h
+	gcc pgmcompare.c -c -g
 
 clean:
 	rm *.o pgmEcho pgmComp pgma2b pgmb2a pgmReduce pgmTile pgmAssemble
