--- a/assignment_1/makefile
+++ b/assignment_1/makefile
@@ -1,4 +1,4 @@
-all: pgmEcho pgma2b pgmb2a pgmComp # pgmReduce pgmTile pgmAssemble
+all: pgmEcho pgma2b pgmb2a pgmComp pgmReduce # pgmTile pgmAssemble
 
 pgmEcho: pgmEcho.o pgmio.o pgmerror.o pgmdata.o
 	gcc pgmEcho.o pgmio.o pgmerror.o pgmdata.o -o pgmEcho -g
@@ -12,11 +12,17 @@ pgma2b: pgma2b.o pgmio.o pgmerror.o pgmdata.o
 pgmb2a: pgmb2a.o pgmio.o pgmerror.o pgmdata.o
 	gcc pgmb2a.o pgmio.o pgmerror.o pgmdata.o -o pgmb2a -g
 
+pgmReduce: pgmReduce.o pgmshrink.o pgmio.o pgmerror.o pgmdata.o
+	gcc pgmReduce.o pgmshrink.o pgmio.o pgmerror.o pgmdata.o -o pgmReduce -g
+
 pgmEcho.o: pgmEcho.c
 	gcc pgmEcho.c -c -g
 
 pgmComp.o: pgmComp.c
 	gcc pgmComp.c -c -g
+
+pgmReduce.o: pgmReduce.c
+	gcc pgmReduce.c -c -g
 
 pgma2b.o: pgma2b.c
 	gcc pgma2b.c -c -g
@@ -35,6 +41,9 @@ pgmdata.o: pgmdata.c pgmlimits.h
 
 pgmcompare.o: pgmcompare.c pgmdata.h
 	gcc pgmcompare.c -c -g
+
+pgmshrink.o: pgmshrink.c pgmdata.h
+	gcc pgmshrink.c -c -g
 
 clean:
 	rm *.o pgmEcho pgmComp pgma2b pgmb2a pgmReduce pgmTile pgmAssemble
