Started on pgmTile

--- a/assignment_1/makefile
+++ b/assignment_1/makefile
@@ -1,4 +1,4 @@
-all: pgmEcho pgma2b pgmb2a pgmComp pgmReduce # pgmTile pgmAssemble
+all: pgmEcho pgma2b pgmb2a pgmComp pgmReduce pgmTile #pgmAssemble
 
 pgmEcho: pgmEcho.o pgmio.o pgmerror.o pgmdata.o
 	gcc pgmEcho.o pgmio.o pgmerror.o pgmdata.o -o pgmEcho -g
@@ -15,6 +15,9 @@ pgmb2a: pgmb2a.o pgmio.o pgmerror.o pgmdata.o
 pgmReduce: pgmReduce.o pgmshrink.o pgmio.o pgmerror.o pgmdata.o
 	gcc pgmReduce.o pgmshrink.o pgmio.o pgmerror.o pgmdata.o -o pgmReduce -g
 
+pgmTile: pgmTile.o pgmgroup.o pgmio.o pgmerror.o pgmdata.o
+	gcc pgmTile.o pgmgroup.o pgmio.o pgmerror.o pgmdata.o -o pgmTile -g
+
 pgmEcho.o: pgmEcho.c
 	gcc pgmEcho.c -c -g
 
@@ -23,6 +26,9 @@ pgmComp.o: pgmComp.c
 
 pgmReduce.o: pgmReduce.c
 	gcc pgmReduce.c -c -g
+
+pgmTile.o: pgmTile.c
+	gcc pgmTile.c -c -g
 
 pgma2b.o: pgma2b.c
 	gcc pgma2b.c -c -g
@@ -44,6 +50,9 @@ pgmcompare.o: pgmcompare.c pgmdata.h
 
 pgmshrink.o: pgmshrink.c pgmdata.h
 	gcc pgmshrink.c -c -g
+
+pgmgroup.o: pgmgroup.c pgmdata.h
+	gcc pgmgroup.c -c -g
 
 clean:
 	rm *.o pgmEcho pgmComp pgma2b pgmb2a pgmReduce pgmTile pgmAssemble
