--- a/assignment_1/makefile
+++ b/assignment_1/makefile
@@ -61,5 +61,5 @@ pgmgroup.o: pgmgroup.c pgmdata.h
 	gcc pgmgroup.c -c -g
 
 clean:
-	rm *.o pgmEcho pgmComp pgma2b pgmb2a pgmReduce pgmTile
+	rm *.o pgmEcho pgmComp pgma2b pgmb2a pgmReduce pgmTile pgmAssemble
 		
